# uclv_aipr_panda_clik_demo

./: README.MD
uclv_aipr_panda_clik_demo/: CMakeLists.txt  package.xml
uclv_aipr_panda_clik_demo/include/uclv_aipr_panda_clik_demo/: quintic_trajectory.h
uclv_aipr_panda_clik_demo/launch/: clik.launch.py
uclv_aipr_panda_clik_demo/src/: cartesian_traj_action_server_node.cpp  clik_node.cpp  joint_traj_action_server_node.cpp  task_node.cpp
uclv_aipr_panda_clik_demo_interfaces/: CMakeLists.txt  package.xml
uclv_aipr_panda_clik_demo_interfaces/action/: CartesianTraj.action  JointTraj.action
